* Implemented endpoint to retrieve ratings of station * Return ratings of models with bikes
